--- a/exercises/project-1/index.html
+++ b/exercises/project-1/index.html
@@ -10,7 +10,7 @@
       <h1>TensorFlow.js: Using a pre-trained model</h1>
 
       <!-- part 1 -->
-      <section id="uploaded-image">
+      <!-- <section id="uploaded-image">
         <section id="input">
           <h2>Prediction using an uploaded image</h2>
           <div id="file-container">
@@ -25,10 +25,10 @@
 
           <div id="predictions"></div>
         </section>
-      </section>
+      </section> -->
 
       <!-- part 2 & 3 -->
-      <!-- <section id="webcam-section">
+      <section id="webcam-section">
         <section id="input">
           <h2>Prediction using an image captured from the webcam</h2>
 
@@ -40,10 +40,14 @@
           <canvas id="canvas"> </canvas>
         </section>
 
-        <div id="predictions"></div>
-      </section> -->
+        <section id="predictions">
+          <div class="output"></div>
 
-      <script type="module" src="part1.js"></script>
+          <div id="predictions"></div>
+        </section>
+      </section>
+
+      <script type="module" src="part2.js"></script>
     </div>
   </body>
 </html>
