--- a/exercises/project-2/index.html
+++ b/exercises/project-2/index.html
@@ -11,12 +11,12 @@
     <h2>Transfer learning</h2>
 
     <!-- Part 1 -->
-    <button id="start">Start</button>
+    <!-- <button id="start">Start</button>
     <div id="webcam-container"></div>
-    <div id="label-container"></div>
+    <div id="label-container"></div> -->
 
     <!-- Part 2 -->
-    <!-- <div id="status">Loading model...</div>
+    <div id="status">Loading model...</div>
 
     <div id="controller" style="display: none">
       <div>
@@ -43,8 +43,8 @@
         <button class="record-button" id="right">Add right sample</button>
         <p><span id="right-total">0</span> examples</p>
       </div>
-    </div> -->
+    </div>
 
-    <script type="module" src="part1.js"></script>
+    <script type="module" src="part2.js"></script>
   </body>
 </html>
